2002-02-25  Darin Adler  <darin@bentspoon.com>

	* configure.in: Call ourselves libgnomeui, not gnome-libs.

2002-02-23  Havoc Pennington  <hp@pobox.com>

	* libgnomeui/gnome-file-entry.c (gnome_file_entry_class_init):
	fill in set_property/get_property prior to installing properties
	so glib won't whine.

2002-02-23  Jody Goldberg <jody@gnome.org>

	* libgnomeui/gnome-uidefs.h : Use lower case for the stock accelerator
	  keys.

	* test-gnome/testgnome.c (helper_file_menu) : Use some STOCK items
	  too.  These illustrate the current accelerator breakage.

	* libgnomeui/gnome-app-helper.h : constify the label and hint.

2002-02-22  Murray Cumming  <murrayc@usa.net>

	* Renamed GnomeIconList::select_all default signal handler
	to unused, and removed the signals enum SELECT_ALL value, because
	there is no such signal in GnomeIconList.
	* Changed gnome_icon_text_item_focus() and 
	gnome_icon_text_item_select() args from int to gboolean.
	
2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-app-helper.c: Remove unsupported #ifdef ENABLE_NLS.
	
2002-02-21  Federico Mena Quintero  <federico@ximian.com>

	* libgnomeui/gnome-dialog.c: Use
	g_signal_* and g_object_* instead of gtk_signal_* and
	gtk_object_*, respectively.
	* libgnomeui/gnome-dateedit.c: Likewise.
	* libgnomeui/gnome-color-picker.c: Likewise.
	* libgnomeui/gnome-client.c: Likewise.
	* libgnomeui/gnome-appbar.c: Likewise.
	* libgnomeui/gnome-app-util.c: Likewise.
	* libgnomeui/gnome-app-helper.c: Likewise.
	* libgnomeui/gnome-dialog-util.c: Likewise.
	* libgnomeui/gnome-druid.c: Likewise.
	* libgnomeui/gnome-druid-page.c: Likewise.
	* libgnomeui/gnome-entry.c: Likewise.

	* libgnomeui/gnome-file-entry.c: Likewise.

	* libgnomeui/gnome-font-picker.c: Likewise.

	* libgnomeui/gnome-gconf-ui.c: Likewise.
	* libgnomeui/gnome-href.c: Likewise.

	* libgnomeui/gnome-ice.c: Likewise.
	* libgnomeui/gnome-icon-entry.c: Likewise.

	* libgnomeui/gnome-icon-item.c: Likewise.
